Changed names and title

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="src/style.css" />
-    <title>Youtube to embed</title>
+    <title>Link to copy maker</title>
     <meta name="description" content="A low effort website that turns a youtube URL into an embed URL" />
     <meta name="keywords" content="Embed, Youtube, Useless, Boring, Redirect" />
     <meta name="author" content="Elander Olsen" />
   </head>
   <body>
-    <h1>Link to copy</h1>
+    <h1>Link to copy maker</h1>
     <h2>Send a link to a friend to copy the text!</h2>
 
     <div class="container">
